bug with z-index nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ header nav {
     justify-content: center;
     width: 100%;
     height: 50px;
+    z-index: 1;
 }
 header nav ul {
     display: flex;
@@ -321,7 +322,6 @@ main {
 /*================================ PORTAFOLIO ========================================*/
 .portafolio {
     position: relative;
-    /* overflow: hidden; */
 }
 .img_portafolio--fondo img{
     position: absolute;
@@ -332,7 +332,6 @@ main {
 @media (min-width: 800px) {
     .portafolio {
         position: relative;
-        /* overflow: hidden; */
     }
     .img_portafolio--fondo img{
         position: absolute;
